--- a/bootstrap/fw/narrow-jumbotron.css
+++ b/bootstrap/fw/narrow-jumbotron.css
@@ -4,10 +4,15 @@
 }
 
 .company-logo{
-    height: 100%;
-    width: 100%;
+    height: 90%;
+    width: 90%;
     display: block;
+    margin: auto;
     }
+
+.card-borderless{
+	border: none;
+}
 
 
 
